--- a/Makefile.in
+++ b/Makefile.in
@@ -64,6 +64,9 @@ build buildworld:
 install installworld:
 	$(MAKE) GLOBAL_BUILD=1 RECTARGET="installworld" recursive
 
+install-deps:
+	$(MAKE) -C external $@
+
 clobber:
 	$(MAKE) GLOBAL_BUILD=1 RECTARGET="$@" recursive
 	rm -rf instlinks
