Ensure that the omniORB Python bits have a place to be put for the developer installation.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk/juggler@14730 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/external/Makefile.in
+++ b/external/Makefile.in
@@ -142,6 +142,7 @@ links-omniORB3 links-omniORB4:
 	$(SHELL) $(MKINSTALLDIRS) $(instlinks)/include
 	$(SHELL) $(MKINSTALLDIRS) $(instlinks)/$(CXX_ORB_BIN_PATH)
 	$(SHELL) $(MKINSTALLDIRS) $(instlinks)/$(CXX_ORB_LIB_PATH)
+	$(SHELL) $(MKINSTALLDIRS) $(instlinks)/$(CXX_ORB_LIB_PATH)/$(PYTHON_PKG_DIR)
 	-$(RM_LN) $(instlinks)/include/$(CXX_ORB_NAME)
 	-$(RM_LN) $(instlinks)/include/omniconfig.h
 	-$(RM_LN) $(instlinks)/include/omnithread
