Refactor:	The sonix-config script no longer contains paths to C++ 		dependencies.  Instead, the dependency path(s) must be 		provided by the caller, the environment variable 		$SNX_DEPS_DIR must be set, or the dependencies must be 		installed in the same tree as Sonix.
This fixes a long-standing problem of distributing copies of Sonix with
paths to dependencies that pointed to installations on the machine where
Sonix was compiled.  It also makes it possible for us to bundle up all the
redistributable C++ dependencies for easy download by users and
developers.


git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@14736 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/sonix/configure.in
+++ b/juggler/modules/sonix/configure.in
@@ -163,7 +163,7 @@ DPP_INSTALLER(vrjuggler, 0644, 0755, 0755)
 CXXFLAGS="$CXXFLAGS $VPR_CXXFLAGS_MIN $GMTL_INCLUDES"
 BASE_APP_LINK_FLAGS="$STDFLAGS $BASE_APP_LINK_FLAGS"
 DEPEND_FLAGS="$VPR_INCLUDES_MIN $GMTL_INCLUDES"
-snx_cxxflags="$STDFLAGS $GMTL_INCLUDES"
+snx_cxxflags="$STDFLAGS"
 
 # List the scripts sonix-config will call to get flags.  This should be in the
 # order used for linking.  That means the dependencies are satisfied right to
