--- a/modules/gadgeteer/configure.in
+++ b/modules/gadgeteer/configure.in
@@ -213,7 +213,7 @@ DPP_INSTALLER(vrjuggler, 0644, 0755, 0755)
 CXXFLAGS="$CXXFLAGS $VPR_CXXFLAGS_MIN $JCCL_CXXFLAGS_MIN $GMTL_INCLUDES"
 BASE_APP_LINK_FLAGS="$STDFLAGS $BASE_APP_LINK_FLAGS"
 DEPEND_FLAGS="$VPR_INCLUDES_MIN $JCCL_INCLUDES_MIN $GMTL_INCLUDES"
-gadget_cxxflags="$STDFLAGS $GMTL_INCLUDES"
+gadget_cxxflags="$STDFLAGS"
 
 # List the scripts gadgeteer-config will call to get flags.  This should be
 # in the order used for linking.  That means the dependencies are satisfied
